kubernetes/arr/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: arr
spec:
  selector:
    app: seerr
  ports:
    - port: 5055
      targetPort: 5055
